--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Catalyst</title>
+<title>GMI LLC</title>
 <meta name="description" content="">
 <meta name="author" content="GMI Group">
 
