Updated description and featured

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about" class="page-scroll">About</a></li>
         <li><a href="#alloys" class="page-scroll">Alloys</a></li>
-        <li><a href="#pricing" class="page-scroll">Pricing</a></li>
-        <li><a href="#buying" class="page-scroll">Buying</a></li>
+        <li><a href="#sales" class="page-scroll">Sales</a></li>
+        <li><a href="#purchasing" class="page-scroll">Purchasing</a></li>
         <li><a href="#contact" class="page-scroll">Contact</a></li>
       </ul>
     </div>
@@ -95,25 +95,22 @@
             We specialise in manufacturing high grade aluminium casting alloys, 
             usually low Iron primary based. Our high integrity alloys are used 
             in a wide range of applications, including aerospace and automotive, 
-            and are produced to all major UK & International standards 
-            including ADC12 and A3105. Alloys can also be tailored to in-house 
-            customer specifications. 
-
-            Our manufacturing team has _ years of experience and strongly committed
+            and are produced to all major International standards 
+            including LM6, LM3, A360, ADC12, A3105 and etc. 
+          </p>
+          <p>
+            Our manufacturing team has 20 years of experience and strongly committed
             to providing the highest quality products to establish long term relationships.
           </p>
             <div class="list-style">
             <div class="col-lg-6 col-sm-6 col-xs-12">
               <ul>
                 <li>Aluminum Ingots</li>
-                <li>Auminum Cubes</li>
-                <li>Auminum Shots</li>
-                <li>Auminum Notch Bar</li>
               </ul>
             </div>
             <div class="col-lg-6 col-sm-6 col-xs-12">
               <ul>
-                <li>600 MT Annual Production Capacity</li>
+                <li>9000 MT Annual Production Capacity</li>
                 <li>Primary Inspection</li>
                 <li>Secondary Inspection</li>
                 <li>Spectrometer Testing</li>
@@ -135,12 +132,13 @@
       <h2>Featured Alloys</h2>
       <hr>
       <p>
-        Aluminium-Silicon alloys can be supplied with Strontium, Titanium, Cobalt, 
-        Beryllium, Antimony, Molybdenum, Zirconium & Vanadium modifications if required.
-
-        Our ingots can be packaged in a variety of bundle sizes, wrapped and banded to suit.
-        
-        Please contact our sales team who will be happy to discuss your particular requirements with you.
+      Our ingots (typically 5-6 KG) can be packaged in a variety of bundle sizes, 
+      wrapped and banded to suit. Alloys can also be tailored to in-house 
+      customer specifications.
+      </p>
+      <p>
+      Please contact our sales team who will be happy to discuss your 
+      particular requirements with you.
       </p>
     </div>
     <div class="row">
@@ -148,30 +146,31 @@
         <!-- <i class="fa fa-home"></i> -->
         <h4>ADC12</h4>
         <img src="img/sl5.jpg" class="img-responsive thumbnail" alt="">
-        <p>
+        <!-- <p>
           Add details about our manufacturing process and infrastructure for this alloy.
-        </p>
+        </p> -->
       </div>
       <div class="col-xs-6 col-md-3"> 
         <h4>A3105</h4>
         <img src="img/al2.jpg" class="img-responsive thumbnail" alt="">
-        <p>
-          Add details about our manufacturing process and infrastructure for this alloy.
-        </p>
+      </div>
+      <div class="col-xs-6 col-md-3"> 
+        <h4>LM24</h4>
+        <img src="img/intro-bg2.jpg" class="img-responsive thumbnail" alt="">
       </div>
     </div>
   </div>
 </div>
 
 <!-- Pricing Section -->
-<div id="pricing" class="text-center">
+<div id="Sales" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>Pricing</h2>
+      <h2>Sales</h2>
       <hr>
       <p>
-        Please contact the sales team for accurate pricing. 
-        The content below serves as an estimate.
+        Please contact the sales team for pricing. Product specifications
+        can be found in the product sheet.
       </p>
       <a href="#about" class="btn btn-custom btn-lg">Full Product Sheet</a> </div>
     </div>
@@ -238,16 +237,16 @@
 </div>
 
 <!-- Buying Section -->
-<div id="buying" class="text-center">
+<div id="purchasing" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>Buying</h2>
+      <h2>Purchasing</h2>
       <hr>
       <p>
         We also buy scrap aluminum. Specifically TT, Trump, Tense, Beverage 
         cans, 6063, 1000 series and Litho sheet.
       </p>
-      <a href="#about" class="btn btn-custom btn-lg">Full Purchase List and Pricing</a> </div>
+      <a href="mailto:ghazimetalindustry@gmail.com" class="btn btn-custom btn-lg">Contact Purchasing</a> </div>
     </div>
   </div>
 </div>
@@ -258,7 +257,9 @@
       <h2>Contact Us</h2>
       <hr>
       <p>The sales team would be happy to assist you in your needs.</p>
-      <a href="mailto: abc@example.com" class="btn btn-custom btn-lg">Send Email</a>
+      <p>Address: Umm-Althoub New Industrial Area<br> Umm-Alquwain, UAE </p>
+      <p>Phone: 00971507057180 (Habib, UAE), 00971506556867 (Shazad, UAE) </p>
+      <a href="mailto:ghazimetalindustry@gmail.com" class="btn btn-custom btn-lg">Send Email</a>
     </div>
     <!-- <div class="col-md-8 col-md-offset-2">
       <form name="sentMessage" id="contactForm" novalidate>
