Added product sheet link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
             usually low Iron primary based. Our high integrity alloys are used 
             in a wide range of applications, including aerospace and automotive, 
             and are produced to all major International standards 
-            including LM6, LM3, A360, ADC12, A3105 and etc. 
+            including LM6, LM3, A360, ADC12, A3105 and etc. ISO 3522:2007 chemical composition
+            alloys available upon request.
           </p>
           <p>
             Our manufacturing team has 20 years of experience and strongly committed
@@ -172,67 +173,9 @@
         Please contact the sales team for pricing. Product specifications
         can be found in the product sheet.
       </p>
-      <a href="#about" class="btn btn-custom btn-lg">Full Product Sheet</a> </div>
+      <a href="https://docs.google.com/spreadsheets/d/1QRIEkOWSiwljl1PoW7BatMkwt6nq3ms5t5Q5V2prfx0/edit?usp=sharing" 
+      target="_blank" rel="noopener noreferrer" class="btn btn-custom btn-lg">Full Product Sheet</a> </div>
     </div>
-    <!-- <div class="row">
-      <div class="col-md-4 col-sm-4">
-        <div class="pricing-table">
-          <div class="plan-name">
-            <h3>A3105</h3>
-          </div>
-          <div class="plan-price">
-            <div class="price-value">$2900/MT</div>
-          </div>
-          <div class="plan-list">
-            <ul>
-              <li><strong>Max 0.3% Fe</strong></li>
-              <li><strong>Secondary Testing</strong></li>
-            </ul>
-          </div>
-          <div class="plan-signup"> <a href="#" class="btn-system">Order Now</a> </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-4">
-        <div class="pricing-table highlight-plan">
-          <div class="plan-name">
-            <h3>Standard</h3>
-          </div>
-          <div class="plan-price">
-            <div class="price-value">$20</div>
-          </div>
-          <div class="plan-list">
-            <ul>
-              <li><strong>10 GB</strong> Disk Space</li>
-              <li><strong>10GB</strong> Monthly Bandwidth</li>
-              <li><strong>10</strong> Domains</li>
-              <li><strong>10</strong> Email Accounts</li>
-              <li><strong>Free</strong> Setup</li>
-            </ul>
-          </div>
-          <div class="plan-signup"> <a href="#" class="btn-system border-btn">Order Now</a> </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-4">
-        <div class="pricing-table">
-          <div class="plan-name">
-            <h3>ADC12 Ingots</h3>
-          </div>
-          <div class="plan-price">
-            <div class="price-value">$30</div>
-          </div>
-          <div class="plan-list">
-            <ul>
-              <li><strong>20 GB</strong> Disk Space</li>
-              <li><strong>20GB</strong> Monthly Bandwidth</li>
-              <li><strong>20</strong> Domains</li>
-              <li><strong>20</strong> Email Accounts</li>
-              <li><strong>Free</strong> Setup</li>
-            </ul>
-          </div>
-          <div class="plan-signup"> <a href="#" class="btn-system">Order Now</a> </div>
-        </div>
-      </div>
-    </div> -->
   </div>
 </div>
 
@@ -261,46 +204,12 @@
       <p>Phone: 00971507057180 (Habib, UAE), 00971506556867 (Shazad, UAE) </p>
       <a href="mailto:ghazimetalindustry@gmail.com" class="btn btn-custom btn-lg">Send Email</a>
     </div>
-    <!-- <div class="col-md-8 col-md-offset-2">
-      <form name="sentMessage" id="contactForm" novalidate>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <input type="text" id="name" class="form-control" placeholder="Name" required="required">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-              <p class="help-block text-danger"></p>
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-          <p class="help-block text-danger"></p>
-        </div>
-        <div id="success"></div>
-        <button type="submit" class="btn btn-custom btn-lg">Send Message</button>
-      </form>
-      <div class="social">
-        <ul>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-        </ul>
-      </div>
-    </div> -->
   </div>
 </div>
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>
-        <!-- Copyright &copy; 2016 Catalyst. 
-        Designed by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a> -->
       </p>
     </div>
   </div>
