--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <h3>Prime Aluminum Supplier in Dubai, UAE</h3>
           <p> 
             We specialise in manufacturing high grade aluminium casting alloys, 
-            usually low Iron primary based. Our high integrity alloys are used 
+            usually low Iron secondary based. Our high integrity alloys are used 
             in a wide range of applications, including aerospace and automotive, 
             and are produced to all major International standards 
             including LM6, LM3, A360, ADC12, A3105 and etc. ISO 3522:2007 chemical composition
@@ -201,7 +201,7 @@
       <hr>
       <p>The sales team would be happy to assist you in your needs.</p>
       <p>Address: Umm-Althoub New Industrial Area<br> Umm-Alquwain, UAE </p>
-      <p>Phone: 00971507057180 (Habib, UAE), 00971506556867 (Shazad, UAE) </p>
+      <p>Phone: 00971507057180 (Habib, UAE), 00971506556867 (Shahzad, UAE) </p>
       <a href="mailto:ghazimetalindustry@gmail.com" class="btn btn-custom btn-lg">Send Email</a>
     </div>
   </div>
